[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/AudioManager.gd" type="Script" id=1]
[ext_resource path="res://Audio/ButtonPress.wav" type="AudioStream" id=2]
[ext_resource path="res://Audio/ButtonBack.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/Pixelland.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/Miss.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/Pickup_Coin.wav" type="AudioStream" id=6]

[node name="AudioManager" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Button_Press" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX"

[node name="Button_Back" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="Music_Game" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
pitch_scale = 0.75
bus = "Music"

[node name="Miss_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="Coin_Collected" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"
